# mesa

./: Android.common.mk  Android.mk  CleanSpec.mk  Make-config  Makefile  Makefile.X11  SConstruct  configure.ac  install-lib-links.mk
configs/: default  linux-dri  mine  mine-dri
docs/: GL3.txt  MESA_agp_offset.spec  MESA_packed_depth_stencil.spec  MESA_resize_buffers.spec  MESA_sprite_point.spec  MESA_window_pos.spec  MESA_ycbcr_texture.spec  README.3DFX  README.BEOS  README.MINGW32  README.MITS  README.WIN32  README.X11  RELNOTES-3.1  RELNOTES-3.2  RELNOTES-3.2.1  RELNOTES-3.4  RELNOTES-3.4.1  RELNOTES-3.4.2  RELNOTES-4.0.1  RELNOTES-4.0.2  RELNOTES-4.0.3  RELNOTES-5.0.1  VERSIONS  news.html  relnotes-7.9.1.html  relnotes-7.9.2.html  relnotes.html  subset.html
docs/relnotes/: 10.0.3.html  10.0.4.html  10.0.5.html  10.5.0.html  11.0.0.html  11.1.0.html
doxygen/: .cvsignore  README  agpgart.doxy  array_cache.doxy  core.doxy  core_subset.doxy  header.html  makefile  math.doxy  math_subset.doxy  miniglx.doxy  radeon.doxy  radeon_subset.doxy  radeondrm.doxy  radeonfb.doxy  swrast.doxy  swrast_setup.doxy  tnl.doxy  tnl_dd.doxy
include/EGL/: eglext.h  eglplatform.h
include/GL/: amesa.h  foomesa.h  fxmesa.h  ggimesa.h  gl.h  gl_mangle.h  glu.h  glu_mangle.h  glut_h.dja  glx.h  glx_mangle.h  mesa_wgl.h  osmesa.h  svgamesa.h  wmesa.h  xmesa.h  xmesa_x.h  xmesa_xf86.h
include/GLES2/: gl2platform.h
include/pci_ids/: pci_id_driver_map.h
progs/beos/: Makefile
progs/demos/: Makefile  Makefile.BeOS-R4  Makefile.X11  Makefile.cygnus  Makefile.win  bounce.c  clearspd.c  copypix.c  drawpix.c  drawpix_pbo.c  gamma.c  gearbox.c  gears.c  gloss.c  glutfx.c  isosurf.c  morph3d.c  multiarb.c  osdemo.c  paltex.c  pointblast.c  readpix.c  reflect.c  renormal.c  spectex.c  (+11 more)
src/: Android.mk
src/gallium/drivers/freedreno/a2xx/: Makefile.am  a2xx.xml.h  disasm-a2xx.c  fd2_blend.c  fd2_clear.c  fd2_clear.h  fd2_compiler.c  fd2_context.c  fd2_context.h  fd2_draw.c  fd2_emit.c  fd2_emit.h  fd2_gmem.c  fd2_program.c  fd2_rasterizer.c  fd2_screen.c  fd2_screen.h  fd2_texture.c  fd2_texture.h  fd2_util.c  fd2_zsa.c
src/gallium/drivers/resequencer/: .gitignore  Makefile.am  Makefile.sources  rsq_batch.c  rsq_batch.h  rsq_context.c  rsq_context.h  rsq_draw.c  rsq_draw.h  rsq_fence.c  rsq_fence.h  rsq_public.h  rsq_query.c  rsq_query.h  rsq_resource.c  rsq_resource.h  rsq_screen.c  rsq_screen.h  rsq_state.py  rsq_state_helpers.h  rsq_surface.c  rsq_surface.h
(+1412 files in other folders)
